# slam_rework

./: CMakeLists.txt
ds_main/: CMakeLists.txt
ds_main/include/: window_manager.h
ds_main/src/: dense_slam_gui.cpp  window_manager.cpp
include/: dense_odometry.h  dense_tracking.h  io_wrapper.h  rgbd_image.h
slam_app/: CMakeLists.txt
slam_app/app/: lkt_demo.cpp  ni_recorder.cpp  slam_app.cpp
slam_app/config/: icl_nuim.config  primesense0.config  primesense1.config  tum_freiburg1.config
slam_app/include/: data_source.h  depth_camera.h  openni_camera.h  program_options.h  slam_gui_wrapper.h  slam_local_mapping.h  slam_wrapper.h  tum_dataset_wrapper.h  tum_wrapper.h
slam_app/src/: depth_camera.cpp  live_system.cpp  openni_camera.cpp  program_options.cpp  slam_gui_wrapper.cpp  slam_local_mapping.cpp  slam_wrapper.cpp  tum_dataset_wrapper.cpp  tum_test.cpp  tum_wrapper.cpp
slam_core/: CMakeLists.txt
slam_core/include/: bundle_adjuster.h  dense_mapping.h  dense_odometry.h  dense_tracking.h  device_frame.h  intrinsic_matrix.h  key_point_struct.h  keyframe_graph.h  point_struct.h  pose_struct.h  rgbd_image.h  slam_system.h
slam_core/src/: bundle_adjuster.cpp  dense_mapping.cpp  dense_odometry.cpp  dense_tracking.cpp  device_frame.cpp  intrinsic_matrix.cpp  key_point_struct.cpp  keyframe_graph.cpp  point_struct.cpp  pose_struct.cpp  rgbd_image.cpp  slam_system.cpp
slam_core/test/: unit_test.cpp
slam_cuda/: CMakeLists.txt
slam_cuda/include/: cuda_utils.h  device_array.h  device_map.h  device_map_ops.h  device_scan.h  exclusive_scan.h  image_ops.h  map_struct.h  safe_call.h  se3_reduction.h  utils.h  vector_math.h
slam_cuda/src/: cuda_key_point.cu  image_ops.cu  map_export.cu  map_render.cu  map_struct.cu  map_update.cu  mesh_scene.cu  render_scene.cu  se3_reduction.cu  update_map.cu
slam_cuda/test/: unit_test.cpp
slam_gui/: CMakeLists.txt
slam_gui/glsl/: phong_shader.glsl  raw_vertex_shader.glsl
slam_gui/include/: opengl_display.h  pangolin_gui.h
slam_gui/src/: opengl_display.cpp  pangolin_gui.cpp
slam_map/: CMakeLists.txt
slam_map/include/: dense_mapping.h
slam_map/src/: dense_mapping.cpp
slam_util/: CMakeLists.txt
slam_util/include/: intrinsic_matrix.h  logging_global.h  message_logger.h  message_queue.h  opencv_recorder.h  revertable.h  simple_config_file_loader.h  stop_watch.h
slam_util/src/: intrinsic_matrix.cpp  logging_global.cpp  message_logger.cpp  message_queue.cpp  opencv_recorder.cpp  simple_config_file_loader.cpp  stop_watch.cpp
src/: dense_odometry.cpp  dense_tracking.cpp  io_wrapper.cpp  main.cpp  rgbd_image.cpp  tum_test.cpp
